# simple-paddle

./: .gitignore  Ball.cpp  Ball.h  CMakeLists.txt  GameObject.cpp  GameObject.h  Makefile  Paddle.cpp  Paddle.h  README.md  main.cpp
cmake/: FindSFML.cmake
src/: Ball.cpp  Ball.h  GameObject.cpp  GameObject.h  Paddle.cpp  Paddle.h  main.cpp
